--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,102 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary: #0e7490; /* Deep Teal Blue */
+  --secondary: #e6f4f1; /* Soft Mint */
+  --accent: #22c55e; /* Healthy Green */
+  --dark: #0f172a;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
+}
+
+@keyframes progress {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+a {
+  cursor: pointer;
+}
+
+.animate-progress {
+  animation: progress 3s linear forwards;
+}
+
+@media (max-width: 768px) {
+  .bg-fixed {
+    background-attachment: scroll !important;
+  }
+}
+
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradientShift 3s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes marqueeReverse {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 15s linear infinite;
+}
+
+.animate-marquee-reverse {
+  animation: marqueeReverse 15s linear infinite;
+}
+
+.footer-link {
+  position: relative;
+  display: inline-block;
+  padding-left: 14px;
+  transition: all 0.3s ease;
+}
+
+/* Dash before link */
+.footer-link::before {
+  content: "*";
+  position: absolute;
+  left: 0;
+  color: var(--primary);
+  transition: transform 0.3s ease;
+}
+
+/* Hover effects */
+.footer-link:hover {
+  color: var(--primary);
+  transform: translateX(6px);
+}
+
+.footer-link:hover::before {
+  transform: translateX(4px);
 }
